@@ -14,6 +14,8 @@ x2goclient (4.0.1.1-0~x2go1) UNRELEASED; urgency=low
     - Enable full access desktop sharing across user accounts.
     - Avoid multiple selectUserSession requests when in broker
       mode.
+    - Properly set the remote server address received via selectUserSession
+      method when in broker mode. (Fixes: #226).
 
   [ Ezra Bühler ]
   * New upstream version (4.0.1.1):
